fix ugly double border for menu buttons

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -555,6 +555,9 @@
   .flexy(wrap);
   .menu-button {
     max-width: 50%;
+    + .menu-button {
+      border-left: none;
+    }
   }
   .menu-button,
   .google-login {
